// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CardWrapper /> should render correctly with all props 1`] = `
<div
  className="relative mx-auto min-w-[20rem] max-w-[70rem] flex-1 grid place-items-center text-center bg-red-500"
  id="testId"
>
  <div>
    <header>
      <section
        className="flex w-full flex-col gap-1"
      >
        <h1
          className="text-blue-500"
        >
          H
          e
          l
          l
          o
           
          W
          o
          r
          l
          d
          !
        </h1>
        <h4
          data-testid="Test subtitle Subtitle"
        >
          Test subtitle
        </h4>
      </section>
    </header>
    <div>
      Child
    </div>
  </div>
</div>
`;

exports[`<CardWrapper /> should render correctly with mandatory props 1`] = `
<div
  className="relative mx-auto min-w-[20rem] max-w-[70rem] flex-1 mt-6 w-11/12 md:mt-10"
>
  <div>
    <header>
      <section
        className="flex w-full flex-col gap-1"
      >
        <h1
          className="mb-[4.5rem] w-max border-b pb-2 text-5xl font-semibold md:text-6xl"
        >
          H
          e
          l
          l
          o
           
          W
          o
          r
          l
          d
          !
        </h1>
      </section>
    </header>
    <div>
      Child
    </div>
  </div>
</div>
`;
